# datetimepicker

./: .detoxrc.js  .eslintrc.js  .eslintrc.json  .flowconfig  .flowconfig.android  .gitignore  .npmignore  .prettierrc  .releaserc  CHANGELOG.md  CONTRIBUTING.md  README.md  RNDateTimePicker.podspec  app.plugin.js  babel.config.js  jest.config.js  metro.config.js  metro.config.windows.js  package-lock.json  package.json  react-native.config.js  sonar-project.properties  tsconfig.build.json  tsconfig.json
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  label-actions.yml  support.yml
android/: build.gradle
docs/: android-styling.md  manual-installation.md  migration.md  windows-xaml-support.md
example/: App.js  App.tsx  SegmentedControl.js  SegmentedControl.tsx  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js
harmony/: datetimepicker.har
harmony/datetimepicker/src/main/cpp/: CMakeLists.txt  ComponentDescriptors.h  DateTimePickerEventEmitRequestHandler.h  DateTimePickerJSIBinder.h  DateTimePickerNapiBinder.h  DateTimePickerPackage.h  EventEmitters.cpp  EventEmitters.h  Props.cpp  Props.h  ShadowNodes.cpp  ShadowNodes.h  States.cpp  States.h
ios/: RNDateTimePicker-Swift.h  RNDateTimePicker.h  RNDateTimePicker.m  RNDateTimePickerManager.m  RNDateTimePickerShadowView.h  RNDateTimePickerShadowView.m  SwiftFunctions.swift
jest/: index.js  mockEventTriggers.js  setup.js
patches/: @react-native-community+cli-platform-android+14.1.0.patch  detox+20.13.5.patch  (+4 more)
src/: androidUtils.js  (+45 more)
(+195 files in other folders)
